fjord-compiler/test/errors/TooManyParameters0.fj
module test.errors.TooManyParameters0

myVal : Int 
myVal x =
  0
